--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.6.0",
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@googlemaps/js-api-loader": "^1.16.8",
+		"@heroicons/react": "^2.1.5",
 		"@internationalized/date": "^3.5.5",
 		"@next-auth/prisma-adapter": "^1.0.7",
 		"@nextui-org/button": "2.0.34",
