--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"react-hot-toast": "^2.4.1",
 		"react-i18next": "^15.0.0",
 		"react-icons": "^5.2.1",
+		"react-select": "^5.8.2",
 		"react-type-animation": "^3.2.0",
 		"swr": "^2.2.5",
 		"tailwind-merge": "^2.4.0"
