--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
 		"react-i18next": "^15.0.0",
 		"react-icons": "^5.2.1",
 		"react-select": "^5.8.2",
+		"react-toastify": "^10.0.6",
 		"react-type-animation": "^3.2.0",
 		"swr": "^2.2.5",
 		"tailwind-merge": "^2.4.0"
