--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@emotion/styled": "^11.13.5",
 		"@fortawesome/fontawesome-svg-core": "^6.6.0",
 		"@fortawesome/free-solid-svg-icons": "^6.6.0",
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@googlemaps/js-api-loader": "^1.16.8",
 		"@heroicons/react": "^2.1.5",
 		"@internationalized/date": "^3.5.5",
+		"@mui/material": "^6.1.10",
 		"@next-auth/prisma-adapter": "^1.0.7",
 		"@nextui-org/button": "2.0.34",
 		"@nextui-org/code": "2.0.29",
